--- a/style.css
+++ b/style.css
@@ -1,543 +1,1 @@
-@font-face {
-	font-family: MontSerratRegular;
-	src: url('fonts/Montserrat-Regular.ttf');
-	font-weight: normal;
-	font-style: normal;
-}
-
-@font-face {
-	font-family: MontSerratBold;
-	src: url('fonts/Montserrat-Bold.ttf');
-	font-weight: normal;
-	font-style: normal;
-}
-
-
-@font-face {
-	font-family: LatoRegular;
-	src: url('fonts/Lato-Regular.ttf');
-	font-weight: normal;
-	font-style: normal;
-}
-
-body {
-	padding: 0;
-	margin: 0;
-	font-family: LatoRegular;
-}
-
-
-
-/*Common Styling*/
-.container {
-	
-	padding-left: 15px;
-	padding-right: 15px;
-	margin-right: auto;
-	margin-left: auto;
-}
-
-.heading {
-	font-size: 40px;
-	color: #fff;
-	font-family: MontSerratRegular;
-	font-weight: normal;
-}
-.button {
-	cursor: pointer;
-	-webkit-transform: perspective(1px) translateZ(0);
-	transform: perspective(1px) translateZ(0);
-	box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-	-webkit-transition-duration: 0.3s;
-	transition-duration: 0.3s;
-	-webkit-transition-property: transform;
-	transition-property: transform;
-	border: none;
-	text-transform: uppercase;
-}
-
-.button:hover {
-	  transform: scale(1.05);
-}
-
-.button:focus {
-	border: none;
-	outline-color: transparent;
-}
-
-
-
-/*Page Styling*/
-
-.landing-section {
-	background: url('images/shutterstock-130099706.png');
-	height: 700px;
-	background-size: cover;
-	background-color: #2a2d35;
-	background-repeat: no-repeat;
-	color: #fff;
-
-}
-
-.navbar {
-	padding: 30px 40px;
-	display: flex;
-	justify-content: space-between;
-}
-
-.landing-content-wrapper {
-	text-align: center;	
-	color: #fff;
-	padding: 50px 0 0 0;
-}
-
-
-.landing-heading {
-	padding: 0 245px;
-}
-
-.cta-content {
-	display: inline-flex;
-	padding: 0 280px;
-}
-
-.cta-content-wrapper {
-	width: 60%;
-}
-
-.cta-content-wrapper p {
-	margin: 0;
-	font-family: LatoRegular;
-	font-size: 18px;
-	text-align: left;
-	line-height: 28px;
-}
-
-.button-wrapper button {
-
-	background-color: #ea7141;
-	color: #fff;
-	border-radius: 38px;
-	width: 306px;
-	font-size: 40px;
-	
-	padding: 12px 0;
-
-}
-
-
-.services {
-	margin-top: 120px;
-	clear: both;
-}
-
-.services:after {
-	clear: both;
-}
-
-.services:before {
-	clear: both;
-}
-
-.services img {
-	height: 29px;
-}
-
-.services-grid {
-	width: calc(100%/5);
-	float: left;
-	text-align: center;
-}
-.orange-arrow {
-	color: #ea7141;
-}
-
-.bookmark-wrapper {
-	display: flex;
-}
-
-.bookmark-section {
-	background: #f6f6f6;
-	padding: 80px 0;
-}
-.article-description {
-	color: #999999;
-}
-.article {
-	flex: 1;
-}
-.left-article {
-	flex: 2;
-	text-align: center;
-	padding: 45px 30px;
-
-}
-
-.article-head {
-	font-family: MontSerratBold;
-	font-weight: bold;
-}
-.article .button {
-	background-color: #fff;
-	border-radius: 25.5px;
-	width: 195px;
-	padding: 10px 0;
-	font-size: 20px;
-	-webkit-box-shadow: 0 8px 6px -6px #d6d6d6;
-	-moz-box-shadow: 0 8px 6px -6px #d6d6d6;
-	box-shadow: 0 8px 6px -6px #d6d6d6;
-	color: #ea7141;
-	border: solid 1px #e5e5e5;
-}
-
-.right-article img{
-	border: 1px solid #e5e5e5;
-}
-
-.right-article img:hover {
-	-moz-box-shadow:    8px 3px 5px 6px #ccc;
-  	-webkit-box-shadow: 8px 3px 5px 6px #ccc;
-  	box-shadow:         8px 3px 5px 6px #ccc;
-  	box-sizing: border-box;
-}
-
-.news-section {
-	text-align: center;
-	padding: 80px 20px;
-}
-.news-section .left-article {
-	flex: 1;
-	padding: 0 20px 0 100px;
-}
-
-.news-section .article {
-	text-align: left;
-}
-
-.news-section .content {
-	padding-right: 80px;
-    padding-bottom: 29px;
-    line-height: 26px;
-    color: #999999;
-    font-size: 16px;
-}
-
-.news-section .right-article img:hover {
-	box-shadow: none;
-}
-
-.news-section .right-article img {
-	border: none;
-}
-
-.subtitle {
-	font-family: MontSerratBold;
-	font-size: 24px;
-}
-.black-txt {
-	color: black;
-}
-
-.news-trackr-section {
-	text-align: center;
-	padding: 0 0 50px 0;
-}
-
-.main-heading {
-	font-family: MontSerratBold;
-	font-size: 24px;
-}
-
-.description {
-	color: #999999;
-}
-
-.footer-wrapper {
-	text-align: center;
-}
-.foo-list {
-	text-decoration: none;
-	list-style: none;
-	font-size: 12px;
-}
-
-.foo-list li {
-	display: inline-block;
-	padding: 5px 20px 5px 0;
-	color: #33363e;
-	cursor: pointer;
-}
-
-.foo-list li:after {
-	content: "|";
-	margin-left: 20px;
-}	
-
-.foo-list li:last-child:after {
-	content: "";
-}
-
-.tos {
-	font-size: 12px;
-	color: #999999;
-	padding-bottom: 15px;
-}
-
-/*pop up styling*/
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-}
-.modal-content {
-  background-color: #fefefe;
-  margin: auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 40%;
-  color: black;
-}
-
-/* The Close Button */
-.close {
-  color: #aaaaaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: #000;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-.modal-right {
-	padding-top: 0;
-
-}
-.modal-content-right {
-	width: 40%;
-	float: right;
-}
-
-.ie-content {
-	position: absolute;
-	bottom: 0;
-	left: 25%;
-}
-.modal-left {
-	padding-top: 0;
-}
-.modal-content-left {
-	float: left;
-}
-
-#myBtn {
-  display: none;
-  position: fixed;
-  bottom: 20px;
-  right: 30px;
-  z-index: 99;
-  font-size: 18px;
-  border: none;
-  outline: none;
-  background-color: #ea7141;
-  color: white;
-  cursor: pointer;
-  padding: 12px;
-  border-radius: 28px;
-  width: 49px;
-}
-
-#myBtn img {
-	transform: rotate(268deg);
-}
-
-/*Mediaqueries*/
-
-@media screen and (min-width: 768px) {
-	.container {
-		width: 750px;
-	}
-
-
-}
-
-
-
-@media screen and (min-width: 992px) {
-	.container {
-		width: 970px;
-	} 
-}
-
-
-
-
-@media screen and (min-width: 1200px) {
-	.container {
-		width: 1170px;
-	}
-}
-
-
-
-
-@media screen and (min-width: 1300px) {
-	.container {
-		width: 1200px;
-	}
-}
-
-
-
-
-
-
-@media screen and (max-width: 1024px) {
-	.landing-heading {
-		padding: 0 130px;
-	}
-
-	.cta-content {
-		padding: 0 165px;
-	}
-}
-
-@media screen and (max-width: 991px) {
-	.landing-heading {
-		padding: 0 40px;
-	}
-	.heading {
-		font-size: 36px;
-	}
-
-	.cta-content-wrapper {
-		width: auto;
-		padding: 10px 40px 30px 40px;
-	}
-
-	.cta-content {
-		flex-direction: column;
-		padding: 0 90px;
-	}
-
-	.bookmark-wrapper.container {
-		margin-left: 0;
-	}
-
-	.news-section .left-article {
-		padding: 0 20px 0 0;
-	}
-
-}
-
-@media screen and (max-width: 768px) {
-	.container {
-		padding-left: 0;
-		padding-right: 0;
-	}
-
-	.news-img {
-		width: 100%;
-	}
-
-	.news-section {
-		padding: 80px 0 80px 10px;
-	}
-	.news-section .content {
-		padding-right: 10px;
-	}
-}
-
-@media screen and (max-width: 600px) {
-	.heading {
-		font-size: 34px;
-	}
-
-	.landing-heading {
-		padding: 0 10px;
-	}
-
-	.cta-content {
-		padding: 0 20px;
-	}
-
-	.button-wrapper button {
-		width: 275px;
-	}
-
-	.services {
-		margin-top: 90px;
-	}
-
-	.bookmark-wrapper {
-		flex-direction: column;
-	}
-	.right-article {
-		text-align: center;
-	}
-
-	.news-section .article {
-		padding: 0 15px 15px 15px;
-	}
-
-
-	.news-trackr-section {
-		padding: 0 15px 50px 15px;
-	}
-	.foo-list li {
-		display: block;
-	}
-
-	.foo-list li:after {
-		content: "";
-	}
-}
-
-@media screen and (max-width: 480px) {
-	.chrome-extension {
-		display: none;
-	}
-	.heading {
-		font-size: 30px;
-	}
-
-	.landing-content-wrapper {
-		padding: 30px 0 0 0;
-	}
-
-	.services-grid {
-		float: none;
-		width: 100%;
-	}
-	.services:last-child {
-		padding-bottom: 15px;
-	}
-	.landing-section {
-		height: auto;
-	}
-	.button-wrapper button {
-		width: 210px;
-		font-size: 25px;
-	}
-	.right-article {
-		padding: 5px;
-	}
-
-}
-
-
-
-
-
+@font-face{font-family:MontSerratRegular;src:url(fonts/Montserrat-Regular.ttf);font-weight:400;font-style:normal}@font-face{font-family:MontSerratBold;src:url(fonts/Montserrat-Bold.ttf);font-weight:400;font-style:normal}@font-face{font-family:LatoRegular;src:url(fonts/Lato-Regular.ttf);font-weight:400;font-style:normal}body{padding:0;margin:0;font-family:LatoRegular}.container{padding-left:15px;padding-right:15px;margin-right:auto;margin-left:auto}.heading{font-size:40px;color:#fff;font-family:MontSerratRegular;font-weight:400}.button{cursor:pointer;-webkit-transform:perspective(1px) translateZ(0);transform:perspective(1px) translateZ(0);box-shadow:0 0 1px transparent;-webkit-transition-duration:.3s;transition-duration:.3s;-webkit-transition-property:transform;transition-property:transform;border:none;text-transform:uppercase}.button:hover{transform:scale(1.05)}.button:focus{border:none;outline-color:transparent}.landing-section{background:url(images/shutterstock-130099706.png);height:700px;background-size:cover;background-color:#2a2d35;background-repeat:no-repeat;color:#fff}.navbar{padding:30px 40px;display:flex;justify-content:space-between}.landing-content-wrapper{text-align:center;color:#fff;padding:50px 0 0 0}.landing-heading{padding:0 245px}.cta-content{display:inline-flex;padding:0 280px}.cta-content-wrapper{width:60%}.cta-content-wrapper p{margin:0;font-family:LatoRegular;font-size:18px;text-align:left;line-height:28px}.button-wrapper button{background-color:#ea7141;color:#fff;border-radius:38px;width:306px;font-size:40px;padding:12px 0}.services{margin-top:120px;clear:both}.services:after{clear:both}.services:before{clear:both}.services img{height:29px}.services-grid{width:calc(100%/5);float:left;text-align:center}.orange-arrow{color:#ea7141}.bookmark-wrapper{display:flex}.bookmark-section{background:#f6f6f6;padding:80px 0}.article-description{color:#999}.article{flex:1}.left-article{flex:2;text-align:center;padding:45px 30px}.article-head{font-family:MontSerratBold;font-weight:700}.article .button{background-color:#fff;border-radius:25.5px;width:195px;padding:10px 0;font-size:20px;-webkit-box-shadow:0 8px 6px -6px #d6d6d6;-moz-box-shadow:0 8px 6px -6px #d6d6d6;box-shadow:0 8px 6px -6px #d6d6d6;color:#ea7141;border:solid 1px #e5e5e5}.right-article img{border:1px solid #e5e5e5}.right-article img:hover{-moz-box-shadow:8px 3px 5px 6px #ccc;-webkit-box-shadow:8px 3px 5px 6px #ccc;box-shadow:8px 3px 5px 6px #ccc;box-sizing:border-box}.news-section{text-align:center;padding:80px 20px}.news-section .left-article{flex:1;padding:0 20px 0 100px}.news-section .article{text-align:left}.news-section .content{padding-right:80px;padding-bottom:29px;line-height:26px;color:#999;font-size:16px}.news-section .right-article img:hover{box-shadow:none}.news-section .right-article img{border:none}.subtitle{font-family:MontSerratBold;font-size:24px}.black-txt{color:#000}.news-trackr-section{text-align:center;padding:0 0 50px 0}.main-heading{font-family:MontSerratBold;font-size:24px}.description{color:#999}.footer-wrapper{text-align:center}.foo-list{text-decoration:none;list-style:none;font-size:12px}.foo-list li{display:inline-block;padding:5px 20px 5px 0;color:#33363e;cursor:pointer}.foo-list li:after{content:"|";margin-left:20px}.foo-list li:last-child:after{content:""}.tos{font-size:12px;color:#999;padding-bottom:15px}.modal{display:none;position:fixed;z-index:1;padding-top:100px;left:0;top:0;width:100%;height:100%;overflow:auto;background-color:#000;background-color:rgba(0,0,0,.4)}.modal-content{background-color:#fefefe;margin:auto;padding:20px;border:1px solid #888;width:40%;color:#000}.close{color:#aaa;float:right;font-size:28px;font-weight:700}.close:focus,.close:hover{color:#000;text-decoration:none;cursor:pointer}.modal-right{padding-top:0}.modal-content-right{width:40%;float:right}.ie-content{position:absolute;bottom:0;left:25%}.modal-left{padding-top:0}.modal-content-left{float:left}#myBtn{display:none;position:fixed;bottom:20px;right:30px;z-index:99;font-size:18px;border:none;outline:0;background-color:#ea7141;color:#fff;cursor:pointer;padding:12px;border-radius:28px;width:49px}#myBtn img{transform:rotate(268deg)}@media screen and (min-width:768px){.container{width:750px}}@media screen and (min-width:992px){.container{width:970px}}@media screen and (min-width:1200px){.container{width:1170px}}@media screen and (min-width:1300px){.container{width:1200px}}@media screen and (max-width:1024px){.landing-heading{padding:0 130px}.cta-content{padding:0 165px}}@media screen and (max-width:991px){.landing-heading{padding:0 40px}.heading{font-size:36px}.cta-content-wrapper{width:auto;padding:10px 40px 30px 40px}.cta-content{flex-direction:column;padding:0 90px}.bookmark-wrapper.container{margin-left:0}.news-section .left-article{padding:0 20px 0 0}}@media screen and (max-width:768px){.container{padding-left:0;padding-right:0}.news-img{width:100%}.news-section{padding:80px 0 80px 10px}.news-section .content{padding-right:10px}}@media screen and (max-width:600px){.heading{font-size:34px}.landing-heading{padding:0 10px}.cta-content{padding:0 20px}.button-wrapper button{width:275px}.services{margin-top:90px}.bookmark-wrapper{flex-direction:column}.right-article{text-align:center}.news-section .article{padding:0 15px 15px 15px}.news-trackr-section{padding:0 15px 50px 15px}.foo-list li{display:block}.foo-list li:after{content:""}}@media screen and (max-width:480px){.chrome-extension{display:none}.heading{font-size:30px}.landing-content-wrapper{padding:30px 0 0 0}.services-grid{float:none;width:100%}.services:last-child{padding-bottom:15px}.landing-section{height:auto}.button-wrapper button{width:210px;font-size:25px}.right-article{padding:5px}}
